[package]
name = "planet-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
planet-common = { path = "../planet-common" }
tokio-native-tls = "*"
native-tls = "*"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
tokio-util = { version = "*", features = ["codec"] }
tokio-stream = { version = "0.1" }
env_logger = "*"
log = "*"
futures = "*"
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
nanorand = "*"
lazy_static = "*"
